--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	<body>
 		<h1>Etch-A-Sketch</h1>
 		<div class="header">
-			<h6>Select the size</h6>
+			<h3>Select the size</h3>
 			<button id="popup">Select</button>
 		</div>
-		<div class="container"></div>
+		<p id="message"> </p>
+		<div class="container"> </div>
 		<div class="footer">
-			<button>Black</button>
-			<button>Rainbow</button>
-			<button>Reset</button>
+			<button id="black">Black</button>
+			<button id="rainbow">Rainbow</button>
+			<button id="reset">Reset</button>
 		</div>
 	</body>
 </html>
